[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voltwise-simulator"
version = "0.1.0"
description = "OCPP 1.6 Charge Point simulator for the VoltWise EV charging platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ocpp", "ev", "charging", "simulator", "websocket"]
dependencies = [
    "websockets>=12.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
voltwise-simulator = "simulator.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]",
]

[tool.hatch.build.targets.wheel]
packages = ["simulator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
